--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx convex dev"
+    "prepare": "npx convex dev"
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.7",
