--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/clerk-react": "^4.30.7",
     "@clerk/nextjs": "^4.29.9",
+    "@liveblocks/client": "^1.10.3",
+    "@liveblocks/react": "^1.10.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
