--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "convex": "^1.10.0",
     "convex-helpers": "^0.1.25",
     "date-fns": "^3.3.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.344.0",
     "nanoid": "^5.0.6",
     "next": "14.1.1",
     "next-themes": "^0.2.1",
+    "perfect-freehand": "^1.2.2",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-contenteditable": "^3.3.7",
@@ -40,6 +42,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
